--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,9 +6,11 @@ permissions:
   contents: read
 jobs:
   Build:
+    name: Build & Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -29,3 +31,35 @@ jobs:
           name: Build Artifacts
           path: |
             **/build/reports
+
+  Publish-image:
+    name: Publish image
+    runs-on: ubuntu-latest
+    needs:
+      - Build
+    env:
+      DOCKER_IMAGE: aahamouda/${{ github.event.repository.name }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.3.0
+
+      - name: Build docker image
+        run: ./gradlew jibDockerBuild -i --image $DOCKER_IMAGE
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push image to repository
+        run: docker push $DOCKER_IMAGE
