--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ def gitHash = 'git rev-parse --verify --short HEAD'.execute().text.trim()
 def baseLineVersion = "0.1"
 
 version = baseLineVersion + "-" + gitHash
-group = "com.locust.operator"
+group = "com.locust"
 
 repositories {
     mavenCentral()
