--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -6,8 +6,10 @@ ext {
     micrometerPrometheusVersion = '4.2.1'
 
     //  Testing
-    mockitoVersion = '4.6.1'
+    mockitoVersion = '4.8.0'
     assertjVersion = '3.23.1'
+    systemLambdaVersion = '1.2.1'
+    k8sClient = '6.1.1' // Matching version from JOSDK
 
     // Operator SDK
     javaOperatorVersion = '3.2.0'
@@ -16,24 +18,35 @@ ext {
 dependencies {
     annotationProcessor("org.projectlombok:lombok")
     annotationProcessor("io.micronaut:micronaut-http-validation")
+    annotationProcessor("io.micronaut:micronaut-inject-java")
     annotationProcessor ("io.javaoperatorsdk:operator-framework:$javaOperatorVersion")
 
+    implementation("io.micronaut:micronaut-inject")
     implementation ("io.micronaut:micronaut-http-client")
     implementation ("io.micronaut:micronaut-jackson-databind")
-    implementation ("io.micronaut:micronaut-management")
-    implementation ("io.micronaut.micrometer:micronaut-micrometer-core")
-    implementation ("io.micronaut.micrometer:micronaut-micrometer-registry-prometheus:$micrometerPrometheusVersion")
-    implementation ("jakarta.annotation:jakarta.annotation-api")
-    implementation ("io.javaoperatorsdk:operator-framework:$javaOperatorVersion")
+    implementation("io.micronaut:micronaut-management")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-core")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-registry-prometheus:$micrometerPrometheusVersion")
+    implementation("jakarta.annotation:jakarta.annotation-api")
+    implementation("io.javaoperatorsdk:operator-framework:$javaOperatorVersion")
 
-    compileOnly ("org.projectlombok:lombok")
-    runtimeOnly ("ch.qos.logback:logback-classic:$logbackVersion")
-    implementation ("io.micronaut:micronaut-validation")
+    compileOnly("org.projectlombok:lombok")
+    runtimeOnly("ch.qos.logback:logback-classic:$logbackVersion")
+    implementation("io.micronaut:micronaut-validation")
 
-    testAnnotationProcessor ("org.projectlombok:lombok")
+    // ### Test
+    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
+    testAnnotationProcessor("org.projectlombok:lombok")
 
-    testImplementation ("org.mockito:mockito-core:$mockitoVersion")
-    testImplementation ("org.assertj:assertj-core:$assertjVersion")
+    testImplementation("org.mockito:mockito-core:$mockitoVersion")
+    testImplementation("org.mockito:mockito-junit-jupiter:$mockitoVersion")
+    testImplementation("org.assertj:assertj-core:$assertjVersion")
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testImplementation("org.junit.jupiter:junit-jupiter-params")
+    testImplementation("io.micronaut.test:micronaut-test-junit5")
+    testImplementation("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation("com.github.stefanbirkner:system-lambda:$systemLambdaVersion")
+    testImplementation("io.fabric8:kubernetes-server-mock:$k8sClient")
 
-    testCompileOnly ("org.projectlombok:lombok")
+    testCompileOnly("org.projectlombok:lombok")
 }
