--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,11 @@ jobs:
           verbose: true
           fail_ci_if_error: true
 
+      - name: Run codacy coverage reporter
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+
       - uses: actions/upload-artifact@v3.1.0
         with:
           name: Build Artifacts
