--- a/.cz.yaml
+++ b/.cz.yaml
@@ -1,6 +1,9 @@
 commitizen:
   bump_message: "bump(release): v$current_version \u2192 v$new_version"
   name: cz_conventional_commits
-  tag_format: $version
+  tag_format: "$major.$minor.$patch$prerelease"
+  annotated_tag: true
   update_changelog_on_bump: true
   version: 0.0.1
+  version_files:
+    - build.gradle:version
