--- a/.cz.yaml
+++ b/.cz.yaml
@@ -1,9 +1,9 @@
 commitizen:
+  annotated_tag: true
   bump_message: "bump(release): v$current_version \u2192 v$new_version"
   name: cz_conventional_commits
-  tag_format: "$major.$minor.$patch$prerelease"
-  annotated_tag: true
+  tag_format: $major.$minor.$patch$prerelease
   update_changelog_on_bump: true
-  version: 0.0.1
+  version: 0.1.0
   version_files:
-    - build.gradle:version
+  - build.gradle:version
