--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,7 +75,11 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }}
+        run: |
+          ct lint
+            --target-branch ${{ github.event.repository.default_branch }}
+            --validate-maintainers false
+
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
@@ -83,3 +87,4 @@ jobs:
 
       - name: Run chart-testing (install)
         run: ct install
+
