--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,8 @@ jobs:
   lint-test:
     name: Lint & Test chart
     runs-on: ubuntu-latest
+    needs:
+      - Build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
