--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,10 +77,7 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: |
-          ct lint
-            --target-branch ${{ github.event.repository.default_branch }}
-            --validate-maintainers false
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --config .github/ct.yaml
 
 
       - name: Create kind cluster
