--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,36 +44,46 @@ jobs:
           path: |
             **/build/reports
 
-  Publish-image:
-    name: Publish image
+  lint-test:
+    name: Lint & Test chart
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
-
     needs:
       - Build
-    env:
-      DOCKER_IMAGE: lotest/${{ github.event.repository.name }}
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: temurin
+          fetch-depth: 0
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2.3.0
-
-      - name: Build docker image
-        run: ./gradlew jibDockerBuild -i --image $DOCKER_IMAGE
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          version: v3.10.0
 
-      - name: Push image to repository
-        run: docker push --all-tags $DOCKER_IMAGE
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          check-latest: true
+
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.3.1
+
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
+          if [[ -n "$changed" ]]; then
+            echo "::set-output name=changed::true"
+          fi
+
+      - name: Run chart-testing (lint)
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --config .github/ct.yaml
+
+
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.4.0
+        if: steps.list-changed.outputs.changed == 'true'
+
+      - name: Run chart-testing (install)
+        run: ct install
+
