--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,72 +1,91 @@
 name: Publish image & helm
 
 on:
-  push:
-    tags:
-      - "*"
+  push
+  #push:
+    #tags:
+    #  - "*"
 
 jobs:
-  Publish-image:
-    name: Publish image
-    runs-on: ubuntu-latest
+#  Publish-image:
+#    name: Publish image
+#    runs-on: ubuntu-latest
+#
+#    env:
+#      DOCKER_IMAGE: lotest/${{ github.event.repository.name }}
+#    steps:
+#      - name: Checkout repo
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: 17
+#          distribution: temurin
+#
+#      - name: Setup Gradle
+#        uses: gradle/gradle-build-action@v2.3.2
+#
+#      - name: Build docker image
+#        run: ./gradlew jibDockerBuild -i --image $DOCKER_IMAGE
+#
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Push image to repository
+#        run: docker push --all-tags $DOCKER_IMAGE
+#
+#  helm-chart-release:
+#    name: Publish Helm chart
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Configure Git
+#        run: |
+#          git config user.name "$GITHUB_ACTOR"
+#          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+#
+#      - name: Install Helm
+#        uses: azure/setup-helm@v3
+#        with:
+#          version: v3.10.0
+#
+#      - name: Custom packaging
+#        run: |
+#          VERSION=${{github.ref_name}}
+#          rm -rf .cr-release-packages
+#          mkdir -p .cr-release-packages
+#          helm package charts/locust-k8s-operator --app-version=${VERSION} --version=${VERSION} --destination=.cr-release-packages
+#
+#      - name: Run chart-releaser
+#        # switch back to helm/chart-releaser-action when https://github.com/helm/chart-releaser-action/pull/109 is merged
+#        uses: askcloudarchitech/chart-releaser-action@skip-packaging-option
+#        with:
+#          skip_packaging: true
+#        env:
+#          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
-    env:
-      DOCKER_IMAGE: lotest/${{ github.event.repository.name }}
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: temurin
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2.3.2
-
-      - name: Build docker image
-        run: ./gradlew jibDockerBuild -i --image $DOCKER_IMAGE
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Push image to repository
-        run: docker push --all-tags $DOCKER_IMAGE
-
-  helm-chart-release:
-    name: Publish Helm chart
+  docs-release:
+    name: Publish documentation
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Setup python
+        uses: actions/setup-python@v2
         with:
-          fetch-depth: 0
+          python-version: 3.x
 
-      - name: Configure Git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
-      - name: Install Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: v3.10.0
-
-      - name: Custom packaging
-        run: |
-          VERSION=${{github.ref_name}}
-          rm -rf .cr-release-packages
-          mkdir -p .cr-release-packages
-          helm package charts/locust-k8s-operator --app-version=${VERSION} --version=${VERSION} --destination=.cr-release-packages
-
-      - name: Run chart-releaser
-        # switch back to helm/chart-releaser-action when https://github.com/helm/chart-releaser-action/pull/109 is merged
-        uses: askcloudarchitech/chart-releaser-action@skip-packaging-option
-        with:
-          skip_packaging: true
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - run: pip install \
+          mkdocs-material \
+          pillow cairosvg \
+          mkdocs-git-revision-date-localized-plugin
+      - run: mkdocs gh-deploy --force
