--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,4 +88,4 @@ jobs:
           mkdocs-material \
           pillow cairosvg \
           mkdocs-git-revision-date-localized-plugin
-      - run: mkdocs gh-deploy --verbose --force
+      - run: mkdocs gh-deploy --verbose --remote-branch 27-custom-request-build-in-depth-documentation
