--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -95,14 +95,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
+#      - name: Setup python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.x
+#
+#      - run: pip install \
+#          mkdocs-material \
+#          pillow cairosvg \
+#          mkdocs-git-revision-date-localized-plugin
+#      - run: mkdocs gh-deploy --verbose
 
-      - run: pip install \
-          mkdocs-material \
-          pillow cairosvg \
-          mkdocs-git-revision-date-localized-plugin
-      - run: mkdocs gh-deploy --verbose
+      - uses: mhausenblas/mkdocs-deploy-gh-pages@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REQUIREMENTS: docs/mkdocs-requirements.txt
 
