chore(27): add build-essential

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,5 +109,6 @@ jobs:
       - uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          EXTRA_PACKAGES: build-essential
           REQUIREMENTS: docs/mkdocs-requirements.txt
 
