chore(27): add build-base

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,6 +109,6 @@ jobs:
       - uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          EXTRA_PACKAGES: build-essential
+          EXTRA_PACKAGES: build-base
           REQUIREMENTS: docs/mkdocs-requirements.txt
 
