chore(27): rewrite core docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,5 +140,5 @@ markdown_extensions:
 
 # Page tree
 nav:
-  - Home: landing-page.md
-  - Example: index.md
+  - Home: index.md
+  - Example: example.md
