--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,12 +35,14 @@ theme:
 
     # Navigation
     - navigation.tracking
-    - navigation.tabs
-    - navigation.sections
     - navigation.top
 
     # Table of content
     - toc.follow
+    - toc.integrate
+
+     # Code
+    - content.code.annotate
 
   palette:
 
@@ -107,6 +109,7 @@ markdown_extensions:
   # Python Markdown
   - abbr
   - admonition
+  - tables
   - attr_list
   - def_list
   - footnotes
@@ -140,5 +143,13 @@ markdown_extensions:
 
 # Page tree
 nav:
-  - Home: index.md
-  - Example: example.md
+  - Introduction: index.md
+  - How does it work: how_does_it_work.md
+  - Features: features.md
+  - Getting Started: getting_started.md
+  - Deploy Operator with HELM: helm_deploy.md
+  - Advanced topics: advanced_topics.md
+  - Metrics & Dashboards: metrics_and_dashboards.md
+  - Roadmap: roadmap.md
+  - Contribute: contribute.md
+  - License: license.md
