--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,13 +1,11 @@
 name: CI Pipeline
 
-on: [ push, pull_request ]
+on: [ push, pull_request, pull_request_target ]
 
-permissions:
-  # todo change back to read when moving docs flow to release
-  contents: write
+permissions: read-all
 
 jobs:
-  Build:
+  build:
     name: Build & Validate
     runs-on: ubuntu-latest
     steps:
@@ -46,11 +44,11 @@ jobs:
           path: |
             **/build/reports
 
-  lint-test:
+  lint-test-helm:
     name: Lint & Test chart
     runs-on: ubuntu-latest
     needs:
-      - Build
+      - build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -81,7 +79,6 @@ jobs:
       - name: Run chart-testing (lint)
         run: ct lint --target-branch ${{ github.event.repository.default_branch }} --config .github/ct.yaml
 
-
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
         if: steps.list-changed.outputs.changed == 'true'
@@ -92,6 +89,8 @@ jobs:
   docs-test:
     name: Test documentation
     runs-on: ubuntu-latest
+    needs:
+      - lint-test-helm
     steps:
       - name: Checkout
         uses: actions/checkout@v3
