chore: disable codecov failing CI till it is reliable

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           name: branch-${{ github.ref }}
           verbose: true
-          fail_ci_if_error: true
+          fail_ci_if_error: false
 
       - name: Run codacy coverage reporter
         uses: codacy/codacy-coverage-reporter-action@v1
