--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,9 @@
 name: CI Pipeline
 
-on: [ push, pull_request, pull_request_target ]
+on:
+  push:
+  pull_request_target:
+    types: [ opened, synchronize, reopened, ready_for_review ]
 
 permissions: read-all
 
