--- a/charts/locust-k8s-operator/templates/crd-locusttest.yaml
+++ b/charts/locust-k8s-operator/templates/crd-locusttest.yaml
@@ -28,7 +28,7 @@ spec:
             spec: # Root field 'spec'
               type: object  # It is an object
               properties: # And has the following fields
-                labels:
+                labels: # Child field 'labels'
                   description: Labels attached to deployed pods
                   type: object
                   properties:
@@ -42,7 +42,7 @@ spec:
                       type: object
                       additionalProperties:
                         type: string
-                annotations:
+                annotations: # Child field 'annotations'
                   description: Annotations attached to deployed pods
                   type: object
                   properties:
@@ -56,6 +56,19 @@ spec:
                       type: object
                       additionalProperties:
                         type: string
+                affinity: # Child field 'affinity'
+                  description: Affinity information to be attached to pods
+                  type: object
+                  properties:
+                    nodeAffinity:
+                      description: Kubernetes node affinity to be attached to pods
+                      type: object
+                      properties:
+                        requiredDuringSchedulingIgnoredDuringExecution:
+                          description: Kubernetes node affinity to be attached to pods
+                          type: object
+                          additionalProperties:
+                            type: string
                 masterCommandSeed: # Child field 'masterCommandSeed'
                   description: Master pod command seed
                   type: string
