--- a/kube/sample-cr/locust-test-cr.yaml
+++ b/kube/sample-cr/locust-test-cr.yaml
@@ -18,6 +18,13 @@ spec:
       myapp.com/version: "2.1.0"
     worker:
       myapp.com/version: "2.1.0"
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        organisation.com/nodeAffinityLabel1: locust-cloud-tests
+        organisation.com/nodeAffinityLabel2: performance-nodes
+        organisation.com/nodeAffinityLabel3: high-memory
+
   masterCommandSeed:
     --locustfile /lotest/src/locust_project_demo.py
     --host https://docs.locust.io
