feat(#78): Support HELM control to enable/disable injecting Affinity & Taint tolerations information from Custom Resources

--- a/charts/locust-k8s-operator/templates/deployment.yaml
+++ b/charts/locust-k8s-operator/templates/deployment.yaml
@@ -75,6 +75,10 @@ spec:
               value: {{ .Values.config.loadGenerationPods.resource.memLimit | quote }}
             - name: POD_EPHEMERAL_LIMIT
               value: {{ .Values.config.loadGenerationPods.resource.ephemeralLimit | quote }}
+            - name: ENABLE_AFFINITY_CR_INJECTION
+              value: {{ .Values.config.loadGenerationPods.affinity.enableCrInjection | quote }}
+            - name: ENABLE_TAINT_TOLERATIONS_CR_INJECTION
+              value: {{ .Values.config.loadGenerationPods.taintTolerations.enableCrInjection | quote }}
             # Metric config
             - name: METRICS_ENABLE
               value: {{ .Values.micronaut.metrics.enabled | quote }}
