feat(#13): Add `managed-by` label to generated resources

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,7 @@ config:
   k8s:
     namespace: ${K8S_NAMESPACE:default}
   load-generation-jobs:
-    ttl-seconds-after-finished: ${JOB_TTL_SECONDS_AFTER_FINISHED}
+    ttl-seconds-after-finished: ${JOB_TTL_SECONDS_AFTER_FINISHED:}
   load-generation-pods:
     affinity:
       enableCrInjection: ${ENABLE_AFFINITY_CR_INJECTION:false}
