--- a/.github/workflows/stale-issues.yaml
+++ b/.github/workflows/stale-issues.yaml
@@ -16,3 +16,4 @@ jobs:
           days-before-stale: 30
           days-before-close: 10
           exempt-all-assignees: true
+          exempt-issue-labels: 'good first issue'
