chore(#124): Upgrade gradle wrapper to version v8.2.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 micronautVersion=3.6.2
 org.gradle.parallel=true
 org.gradle.caching=true
+# To avoid deprecated Gradle 7 default behavior for "Toolchain Download Repositories"
+# More info: https://docs.gradle.org/7.6.1/userguide/toolchains.html#sub:adoptium_and_adopt_open_jdk
+org.gradle.java.installations.auto-download=false
