chore(#124): Set xml report as required for Jacoco

--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -4,7 +4,7 @@ jacocoTestReport {
     executionData file(allTestCoverageFile)
 
     reports {
-        xml.required
-        html.required
+        xml.required = true
+        html.required = true
     }
 }
