--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -9,15 +9,16 @@ ext {
     mockitoVersion = '4.8.0'
     assertjVersion = '3.23.1'
     systemLambdaVersion = '1.2.1'
-    k8sClient = '6.1.1' // Matching version from JOSDK
+    k8sClient = '6.7.2' // Matching version from JOSDK
 
     // Operator SDK
-    javaOperatorVersion = '4.0.2'
+    javaOperatorVersion = '4.4.1'
 }
 
 dependencies {
     annotationProcessor("org.projectlombok:lombok")
     annotationProcessor("io.micronaut:micronaut-http-validation")
+    annotationProcessor("io.micronaut.validation:micronaut-validation-processor")
     annotationProcessor("io.micronaut:micronaut-inject-java")
     annotationProcessor ("io.javaoperatorsdk:operator-framework:$javaOperatorVersion")
 
@@ -25,6 +26,7 @@ dependencies {
     implementation ("io.micronaut:micronaut-http-client")
     implementation ("io.micronaut:micronaut-jackson-databind")
     implementation("io.micronaut:micronaut-management")
+    implementation("io.micronaut.validation:micronaut-validation")
     implementation("io.micronaut.micrometer:micronaut-micrometer-core")
     implementation("io.micronaut.micrometer:micronaut-micrometer-registry-prometheus:$micrometerPrometheusVersion")
     implementation("jakarta.annotation:jakarta.annotation-api")
@@ -32,7 +34,7 @@ dependencies {
 
     compileOnly("org.projectlombok:lombok")
     runtimeOnly("ch.qos.logback:logback-classic:$logbackVersion")
-    implementation("io.micronaut:micronaut-validation")
+    runtimeOnly("org.yaml:snakeyaml")
 
     // ### Test
     testAnnotationProcessor("io.micronaut:micronaut-inject-java")
