--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,9 @@ name: CI Pipeline
 
 on:
   push:
+    branches:
+      - master
+      - main
   pull_request_target:
     types: [ opened, synchronize, reopened, ready_for_review ]
 
