--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -9,10 +9,11 @@ ext {
     mockitoVersion = '4.8.0'
     assertjVersion = '3.23.1'
     systemLambdaVersion = '1.2.1'
-    k8sClient = '6.7.2' // Matching version from JOSDK
+    k8sClient = '6.9.2' // Matching version from JOSDK
+    jenvtest = '0.9.5'
 
     // Operator SDK
-    javaOperatorVersion = '4.4.1'
+    javaOperatorVersion = '4.6.1'
 }
 
 dependencies {
@@ -49,6 +50,8 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-engine")
     testImplementation("com.github.stefanbirkner:system-lambda:$systemLambdaVersion")
     testImplementation("io.fabric8:kubernetes-server-mock:$k8sClient")
+    testImplementation("io.javaoperatorsdk:jenvtest:$jenvtest")
+    testImplementation("io.javaoperatorsdk:jenvtest-fabric8-client-support:$jenvtest")
 
     testCompileOnly("org.projectlombok:lombok")
 }
