--- a/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
+++ b/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
@@ -6,6 +6,12 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "locust-k8s-operator.labels" . | nindent 4 }}
+{{- if .Values.image.pullSecrets }}
+imagePullSecrets:
+{{- range .Values.image.pullSecrets}}
+  - name: {{ . }}
+{{- end }}
+{{- end }}
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
