--- a/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
+++ b/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
@@ -1,14 +1,16 @@
 {{- if .Values.serviceAccount.create -}}
+{{- $serviceAccountName := include "locust-k8s-operator.serviceAccountName" . }}
+
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "locust-k8s-operator.labels" . | nindent 4 }}
 {{- if .Values.image.pullSecrets }}
 imagePullSecrets:
-{{- range .Values.image.pullSecrets}}
+{{- range .Values.image.pullSecrets }}
   - name: {{ . }}
 {{- end }}
 {{- end }}
@@ -17,70 +19,56 @@ imagePullSecrets:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
   namespace: {{ .Release.Namespace | quote }}
 rules:
-  - apiGroups: [ locust.io ]
-    resources:
-      - locusttests
-    verbs:
-      - list
-      - get
-      - watch
-  - apiGroups: [ '*' ]
-    resources:
-      - services
-    verbs:
-      - get
-      - list
-      - create
-      - update
-      - delete
-  - apiGroups: [ '*' ]
-    resources:
-      - jobs
-    verbs:
-      - get
-      - list
-      - create
-      - update
-      - delete
-      - patch
+  - apiGroups: [ "locust.io" ]
+    resources: [ "locusttests" ]
+    verbs: [ "list", "get", "watch" ]
+  - apiGroups: [ "*" ]
+    resources: [ "services" ]
+    verbs: [ "get", "list", "create", "update", "delete" ]
+  - apiGroups: [ "*" ]
+    resources: [ "jobs" ]
+    verbs: [ "get", "list", "create", "update", "delete", "patch" ]
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
   namespace: {{ .Release.Namespace | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+    name: {{ $serviceAccountName }}
     namespace: {{ .Release.Namespace | quote }}
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
 rules:
-  - apiGroups: [ locust.io ]
-    resources:
-      - locusttests
-    verbs: [ '*' ]
+  - apiGroups: [ "locust.io" ]
+    resources: [ "locusttests" ]
+    verbs: [ "*" ]
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+  name: {{ $serviceAccountName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ include "locust-k8s-operator.serviceAccountName" . }}
+    name: {{ $serviceAccountName }}
     namespace: {{ .Release.Namespace | quote }}
+
 {{- end }}
